istio-objects/app-flask/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicemesh
spec:
  hosts:
    - '*'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: servicemesh-flask.prod.svc.cluster.local
            port:
              number: 80
